--- a/spring-boot-activiti/pom.xml
+++ b/spring-boot-activiti/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>spring-boot-demo</artifactId>
         <groupId>com.sean</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <groupId>com.sean</groupId>
@@ -31,10 +31,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
-        <!--<dependency>
+        <!-- 开启安全认证 -->
+        <!--
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>-->
+        </dependency>
+        -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -51,6 +54,20 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <!-- 开启监控管理 -->
+        <!--
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator-docs</artifactId>
+            <version>1.5.22.RELEASE</version>
+        </dependency>
+        -->
 
         <!-- Activiti 启动器 -->
         <dependency>
